# logger

./: CMakeLists.txt  README.md
inc/: Logger.hpp  Logger_Definitions.hpp
src/Platform/x86/: Logger.cpp
